--- a/orario_esempio/config.json
+++ b/orario_esempio/config.json
@@ -6,16 +6,34 @@
     "module_da_cancellare": []
   },
   "groups_da_sostituire": {
-    "1A FRANCESE_2": "1A", "1B SPAGNOLO_2": "1N",
-    "2A FRANCESE_2": "2A", "2B SPAGNOLO_2": "2B",
-    "3A FRANCESE_2": "3A", "3A SPAGNOLO_2": "3A", "3A TEDESCO_2": "3A",
-    "3F FRANCESE_2": "3F", "3F SPAGNOLO_2": "3F", "3F TEDESCO_2": "3F",
-    "3L FRANCESE_2": "3L", "3L FRANCESE_3": "3L", "3L SPAGNOLO_2": "3L",
-    "3L SPAGNOLO_3": "3L", "3L TEDESCO_2": "3L", "3L TEDESCO_3": "3L",
-    "4A SPAGNOLO_2": "4A", "4L FRANCESE_2": "4L", "4L FRANCESE_3": "4L",
-    "4L SPAGNOLO_2": "4L", "4L SPAGNOLO_3": "4L", "4L TEDESCO_2": "4L",
-    "4L TEDESCO_3": "4L", "5A FRANCESE_2": "5A", "5A SPAGNOLO_2": "5A",
-    "5L FRANCESE_3": "5L", "5L SPAGNOLO_2": "5L", "5L TEDESCO_3": "5L"
+    "1A FRANCESE_2": "1A",
+    "1B SPAGNOLO_2": "1B",
+    "2A FRANCESE_2": "2A",
+    "2B SPAGNOLO_2": "2B",
+    "3A FRANCESE_2": "3A",
+    "3A SPAGNOLO_2": "3A",
+    "3A TEDESCO_2": "3A",
+    "3F FRANCESE_2": "3F",
+    "3F SPAGNOLO_2": "3F",
+    "3F TEDESCO_2": "3F",
+    "3L FRANCESE_2": "3L",
+    "3L FRANCESE_3": "3L",
+    "3L SPAGNOLO_2": "3L",
+    "3L SPAGNOLO_3": "3L",
+    "3L TEDESCO_2": "3L",
+    "3L TEDESCO_3": "3L",
+    "4A SPAGNOLO_2": "4A",
+    "4L FRANCESE_2": "4L",
+    "4L FRANCESE_3": "4L",
+    "4L SPAGNOLO_2": "4L",
+    "4L SPAGNOLO_3": "4L",
+    "4L TEDESCO_2": "4L",
+    "4L TEDESCO_3": "4L",
+    "5A FRANCESE_2": "5A",
+    "5A SPAGNOLO_2": "5A",
+    "5L FRANCESE_3": "5L",
+    "5L SPAGNOLO_2": "5L",
+    "5L TEDESCO_3": "5L"
   },
   "fasce_settimanali": {
     "LUN": [
